ecmascript/parser/tests/test262-error-references/fail/3118eaa619345896.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/3118eaa619345896.js:3:3
  |
3 | */]
  |   ^

